# roggen

./: .env  .gitignore  Cargo.toml  README.md  roggen.db
i18n/: de.json  en.json
migrations/2019-05-16-134329_create_posts/: up.sql
migrations/2019-05-20-151052_create_post/: up.sql
migrations/2019-05-21-135815_create_text_section/: down.sql  up.sql
migrations/2019-05-21-140303_create_heading/: down.sql  up.sql
migrations/2019-05-21-140307_create_image/: up.sql
src/: i18n.rs  img.rs  lib.rs  schema.rs  server.rs
src/data/: connections.rs  delete.rs  mod.rs  models.rs  read.rs  write.rs
src/template/: elements.rs  index.rs  language_selector.rs  mod.rs
src/template/blog/: mod.rs  post.rs  post_renderable.rs
src/template/blog/moto/: mod.rs
src/template/blog/roggen/: mod.rs
src/template/blog/tech/: mod.rs
tests/data/models/: heading.rs  image.rs  mod.rs  post.rs  text_section.rs
web/css/: base.css  roggen.css
web/js/: roggen.js
