[package]
name = "roggen"
version = "0.1.0"
authors = ["Stephan Goeppentin <stephan.goeppentin@adition.com>"]
edition = "2018"

[dependencies]
diesel = { version = "1.4.2", features = ["sqlite"] }
dotenv = "0.14.1"
maud = { version = "0.20.0", features = ["rocket"] }
rocket = "0.4.1"
rocket_contrib = { version = "0.4.1", default-features = false, features = ["serve"] }