[package]
name = "roggen"
version = "0.1.0"
authors = ["Stephan Goeppentin <stephan.goeppentin@adition.com>"]
edition = "2018"

[dependencies]
chrono = "0.4.6"
diesel = { version = "1.4.2", features = ["postgres", "chrono"] }
dotenv = "0.14.1"
lazy_static = "1.3.0"
maud = { version = "0.20.0", features = ["rocket"] }
r2d2 = "0.8.4"
r2d2-diesel = "1.0.0"
rand = "0.6.5"
rocket = "0.4.1"
rocket_contrib = { version = "0.4.1", default-features = false, features = ["serve"] }
uebersetzt = "0.1.3"